<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="413dp"
        android:layout_height="62dp"
        android:layout_marginTop="348dp"
        android:background="#C5B62F"
        android:ems="10"
        android:inputType="text"
        android:text="@string/to_help_purdue_pete"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="412dp"
        android:layout_height="85dp"
        android:background="#C5B62F"
        android:ems="10"
        android:inputType="text"
        android:text="@string/out_you_ll_need_to_enter"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="412dp"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="298dp"
        android:background="#C5B62F"
        android:ems="10"
        android:inputType="text"
        android:text="@string/your_course_schedule"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="325dp"
        android:layout_height="126dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:inputType="text"
        android:text="*add more decor around here"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="415dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="#C5B62F"
        android:ems="10"
        android:inputType="text"
        android:text="@string/purdue_pete_scheduling_assistant"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C5B62F"
        android:text="Continue"
        android:textColor="#0F0F0F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>